--- a/EduhomeMVC/EduhomeMVC/EduhomeMVC.csproj
+++ b/EduhomeMVC/EduhomeMVC/EduhomeMVC.csproj
@@ -15,6 +15,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BusinessLayer\BusinessLayer.csproj" />
+    <ProjectReference Include="..\DAL\DAL.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\assets\uploads\images\sliders\" />
   </ItemGroup>
 
 </Project>
